--- a/src/sxastarter/package.json
+++ b/src/sxastarter/package.json
@@ -4,7 +4,7 @@
   "version": "21.0.0-canary",
   "private": true,
   "config": {
-    "appName": "sxastarter",
+    "appName": "Skatepark FEAAS",
     "rootPlaceholders": [
       "jss-main"
     ],
@@ -29,7 +29,9 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@sitecore-feaas/clientside": "^0.0.7",
     "@sitecore-jss/sitecore-jss-nextjs": "^21.0.0-canary",
+    "@sitecore/engage": "^0.3.1",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "graphql": "~15.8.0",
@@ -37,8 +39,7 @@
     "next": "^12.2.5",
     "next-localization": "^0.12.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "@sitecore/engage": "^0.3.1"
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.19.1",
