--- a/src/sxastarter/package.json
+++ b/src/sxastarter/package.json
@@ -4,7 +4,7 @@
   "version": "21.0.0-canary",
   "private": true,
   "config": {
-    "appName": "Skatepark FEAAS",
+    "appName": "FEAAS Skatepark",
     "rootPlaceholders": [
       "jss-main"
     ],
